<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5">

        <TextView
            android:id="@+id/resultado"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text=""
            android:textSize="60sp"
            android:gravity="start|center"
            android:paddingStart="32dp"
            android:paddingEnd="16dp"
            android:layout_span="4"
            android:layout_weight="4"/>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/botonReset"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/reset"
            android:layout_span="4"
            android:layout_weight="4"/>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/boton7"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/siete"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/boton8"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/ocho"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/boton9"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/nueve"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/botonDiv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/dividir"
            android:layout_weight="1"/>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/boton4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/cuatro"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/boton5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/cinco"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/boton6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/seis"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/botonMult"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/multiplicar"
            android:layout_weight="1"/>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/boton1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/uno"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/boton2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/dos"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/boton3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/tres"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/botonResta"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/restar"
            android:layout_weight="1"/>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/botonDec"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/decimal"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/boton0"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/cero"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/botonIgual"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/igual"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/botonSum"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/sumar"
            android:layout_weight="1"/>

    </TableRow>

</TableLayout>